ui/debug/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: cdrive-ui
spec:
  selector:
    name: cdrive-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
