ui/debug/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cdrive-ui
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: cdrive.columbusecosystem.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: cdrive-ui
          servicePort: 3000
  tls:
  - secretName: tls-prod-cert
    hosts:
    - cdrive.columbusecosystem.com
